@@ -20,8 +20,6 @@ package groovy.execute
 
 /**
  *  Cross platform tests for the DGM#execute() family of methods.
- *
- *  @author Paul King
  */
 class ExecuteTest extends GroovyTestCase {
     private String getCmd() {
@@ -33,53 +31,52 @@ class ExecuteTest extends GroovyTestCase {
     }
 
     void testExecuteCommandLineProcessUsingAString() {
-        println "Executing String command: $cmd"
         StringBuffer sbout = new StringBuffer()
         StringBuffer sberr = new StringBuffer()
         def process = cmd.execute()
         process.waitForProcessOutput sbout, sberr
         def value = process.exitValue()
         int count = sbout.toString().readLines().size()
-        println "Exit value: $value, Err lines: ${sberr.toString().readLines().size()}, Out lines: $count"
         assert count > 1
         assert value == 0
     }
 
     void testExecuteCommandLineProcessUsingAStringArray() {
         def cmdArray = cmd.split(' ')
-        println "Executing String[] command: $cmdArray"
         StringBuffer sbout = new StringBuffer()
         StringBuffer sberr = new StringBuffer()
         def process = cmdArray.execute()
         process.waitForProcessOutput sbout, sberr
         def value = process.exitValue()
         int count = sbout.toString().readLines().size()
-        println "Exit value: $value, Err lines: ${sberr.toString().readLines().size()}, Out lines: $count"
         assert count > 1
         assert value == 0
     }
 
     void testExecuteCommandLineProcessUsingAList() {
         List<String> cmdList = Arrays.asList(cmd.split(' '))
-        println "Executing List<String> command: $cmdList"
         StringBuffer sbout = new StringBuffer()
         StringBuffer sberr = new StringBuffer()
         def process = cmdList.execute()
         process.waitForProcessOutput sbout, sberr
         def value = process.exitValue()
         int count = sbout.toString().readLines().size()
-        println "Exit value: $value, Err lines: ${sberr.toString().readLines().size()}, Out lines: $count"
         assert count > 1
         assert value == 0
     }
 
     void testExecuteCommandLineProcessAndUseWaitForOrKill() {
-        String[] java = [System.getProperty('java.home') + "/bin/java",
+        List<String> javaArgs = [System.getProperty('java.home') + "/bin/java",
                 "-classpath",
                 System.getProperty('java.class.path'),
                 "groovy.ui.GroovyMain",
                 "-e",
                 "sleep(2000); println('Done'); System.exit(0)"]
+        if (System.getProperty('java.specification.version') >= '9') {
+            javaArgs.add(3, '--add-modules')
+            javaArgs.add(4, 'java.xml.bind')
+        }
+        String[] java = javaArgs.toArray()
         println "Executing this command for two cases:\n${java.join(' ')}"
         StringBuffer sbout = new StringBuffer()
         StringBuffer sberr = new StringBuffer()
@@ -91,9 +88,6 @@ class ExecuteTest extends GroovyTestCase {
         terr.join()
         def value = process.exitValue()
         int count = sbout.toString().readLines().size()
-        println "Heaps of time case: Exit value: $value, Err lines: ${sberr.toString().readLines().size()}, Out lines: $count"
-        System.err.println 'std err: ' + sberr.toString()
-        System.err.println 'std out: ' + sbout.toString()
 //        assert sbout.toString().contains('Done'), "Expected 'Done' but found: " + sbout.toString() + " with error: " + sberr.toString()
         assert value == 0
 
@@ -108,41 +102,41 @@ class ExecuteTest extends GroovyTestCase {
         terr.join()
         value = process.exitValue()
         count = sbout.toString().readLines().size()
-        println "Insufficient time case: Exit value: $value, Err lines: ${sberr.toString().readLines().size()}, Out lines: $count"
         assert !sbout.toString().contains('Done')
         assert value != 0 // should have been killed
     }
 
     void testExecuteCommandLineUnderWorkingDirectory() {
-        println "Executing command in dir '..': $cmd"
         StringBuffer sbout = new StringBuffer()
         StringBuffer sberr = new StringBuffer()
         def process = cmd.execute(null, new File('..'))
         process.waitForProcessOutput sbout, sberr
         def value = process.exitValue()
         int count = sbout.toString().readLines().size()
-        println "Exit value: $value, Err lines: ${sberr.toString().readLines().size()}, Out lines: $count"
         assert count > 1
         assert value == 0
     }
 
     void testExecuteCommandLineWithEnvironmentProperties() {
-        String[] java = [System.getProperty('java.home') + "/bin/java",
+        List<String> javaArgs = [System.getProperty('java.home') + "/bin/java",
                 "-classpath",
                 System.getProperty('java.class.path'),
                 "groovy.ui.GroovyMain",
                 "-e",
                 "println(System.getenv('foo'))"]
+        if (System.getProperty('java.specification.version') >= '9') {
+            javaArgs.add(3, '--add-modules')
+            javaArgs.add(4, 'java.xml.bind')
+        }
+        String[] java = javaArgs.toArray()
         println "Executing this command:\n${java.join(' ')}"
         def props = ["foo=bar"]
-        println "With these props: $props"
         StringBuffer sbout = new StringBuffer()
         StringBuffer sberr = new StringBuffer()
         def process = java.execute(props, null)
         process.waitForProcessOutput sbout, sberr
         def value = process.exitValue()
         int count = sbout.toString().readLines().size()
-        println "Exit value: $value, Err lines: ${sberr.toString().readLines().size()}, Out lines: $count"
         assert sbout.toString().contains('bar')
         assert value == 0
     }
